[package]
name = "plus"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust workflow doctor, smart cleaner, setup optimizer, and Cargo launcher."
documentation = "https://docs.rs/plus"
readme = "README.md"
keywords = ["rust", "cargo", "cli", "developer-tools", "workflow"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
which = "6"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
